OCMC01-4: Fix flexbox bug in Chrome
Half width heroe text was on the top instead of the bottom, this fixes that. Not sure why. Also remove extra space at top.

--- a/web/themes/custom/sagebootstrap/scss/components/paragraph-hero.scss
+++ b/web/themes/custom/sagebootstrap/scss/components/paragraph-hero.scss
@@ -10,7 +10,7 @@
     width: 100%;
     display: flex;
     justify-content: start;
-    align-items: end;
+    align-items: flex-end;
     padding: 0 0 50px 70px;
     background-size: cover;
     background-position: 50% 50%;
